# spvd

./: .gitignore  ChangeLog  Makefile.am  README.rst  configure.ac
data/: Makefile.am  spv-schema-mig-1.1.sql  spv-schema-update-0.6.0.sql  spv-schema-update-0.7.0.sql  spv-schema.sql  update_sjg_schema_md5_no_resend.sql  update_sjg_schema_spv_status_infos.sql
debian/: changelog  control  copyright  rules  sjconf-spvd.install  sjconf-spvd.postinst  sjconf-spvd.prerm  spv-data.install  spvd.default  spvd.docs  spvd.init  spvd.install  spvd.logrotate
doc/: Makefile.am  sjconf-spvd.t2t  spvd-plugins.t2t  spvd.conf.t2t  spvd.t2t
etc/: Makefile.am  spvd.conf
share/: Makefile.am  basejob.py  baseplugin.py  importerplugin.py  importerplugin.py.in
share/plugins/: Makefile.am  delivery.py  events.py  sample.py  sample2.py  streams.py
sjconf/: Makefile.am
sjconf/confs/: Makefile.am  spvd.conf
sjconf/plugins/: spvd.py.in
tools/: Makefile.am  checks-list.py.in  gis2spv.py.in  spv-inject.sh.in
